--- a/Server/MainWindow.xaml
+++ b/Server/MainWindow.xaml
@@ -7,7 +7,17 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <TextBox x:Name="ContentDa" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="772" IsEnabled="False"/>
+        <TextBox x:Name="ContentDa" HorizontalAlignment="Left" Height="399" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="717" IsEnabled="False"/>
+        <Button x:Name="Disconnected_" Content="disconnected " HorizontalAlignment="Left" Margin="561,180,-167,0" VerticalAlignment="Top" Width="398" RenderTransformOrigin="0.5,0.5" Height="58" Click="Disconnected__Click">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-90.217"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
 
     </Grid>
 </Window>
