--- a/Clientt/MainWindow.xaml
+++ b/Clientt/MainWindow.xaml
@@ -6,17 +6,18 @@
         xmlns:local="clr-namespace:Clientt"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-     <Grid>
+    <Grid>
         <TextBox x:Name="Inp" HorizontalAlignment="Left" Height="23" Margin="10,386,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="670"/>
         <Button x:Name="Send" Content="Send" HorizontalAlignment="Left" Margin="685,386,0,0" VerticalAlignment="Top" Width="97" Height="23" Click="Send_Click"/>
         <TextBox x:Name="Content" HorizontalAlignment="Left" Height="304" Margin="10,77,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="772"/>
-        <Button x:Name="Connect" Content="Connect" HorizontalAlignment="Left" Margin="695,10,0,0" VerticalAlignment="Top" Width="87" Height="59" Click="Connect_Click"/>
+        <Button x:Name="Connect" Content="Connect" HorizontalAlignment="Left" Margin="695,10,0,0" VerticalAlignment="Top" Width="87" Height="31" Click="Connect_Click"/>
         <TextBox x:Name="IP" HorizontalAlignment="Left" Height="23" Margin="10,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="230"/>
         <TextBox x:Name="name" HorizontalAlignment="Left" Height="23" Margin="470,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="220"/>
         <TextBox x:Name="Port" HorizontalAlignment="Left" Height="23" Margin="245,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="220"/>
         <Label Content="IP" HorizontalAlignment="Left" Margin="10,15,0,0" VerticalAlignment="Top" Width="230"/>
         <Label Content="Name" HorizontalAlignment="Left" Margin="470,15,0,0" VerticalAlignment="Top" Width="220"/>
         <Label Content="Port" HorizontalAlignment="Left" Margin="245,15,0,0" VerticalAlignment="Top" Width="220"/>
+        <Button x:Name="disconnect" Content="disconnect" HorizontalAlignment="Left" Margin="695,46,0,0" VerticalAlignment="Top" Width="87" Height="22" Click="Disconnect_Click"/>
 
     </Grid>
 </Window>
